--- a/deploy/react-deployment.yaml
+++ b/deploy/react-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: react-app
-          image: pankajdevops2403/react-app:v1
+          image: pankajdevops2403/react-app:latest
           ports:
             - containerPort: 80
